--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "nodemon": "^2.0.18"
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.18",
+    "otp-generator": "^4.0.0"
   }
 }
